force-app/main/default/objects/TriggerControl__mdt/TriggerControl__mdt.object-meta.xml
<CustomObject>
    <description>Designed to determine if triggers are on or not.</description>
    <label>Trigger Control</label>
    <pluralLabel>Trigger Controls</pluralLabel>
</CustomObject>