force-app/main/default/objects/TriggerControl__mdt/fields/OverrideCustomSettings__c.field-meta.xml
<CustomField>
    <fullName>OverrideCustomSettings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then custom metadata will take precedence over any custom settings</description>
    <label>Override Custom Settings</label>
    <type>Checkbox</type>
</CustomField>