force-app/main/default/objects/TriggerControl__mdt/fields/TriggerOff__c.field-meta.xml
<CustomField>
    <fullName>TriggerOff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if trigger turn off</description>
    <label>Trigger Off</label>
    <type>Checkbox</type>
</CustomField>